<resources>
    <string name="app_name">Reservation System</string>
    <string name="main_title">Welcome\nTo\nBespeak Meal System</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="main_btn_into">Welcome</string>
    <string name="register_title">REGISTRATION</string>
    <string name="register_btn_affirm">Register</string>
    <string name="register_btn_reset">Reset</string>
    <string name="reset_title">Reset Password</string>
    <string name="reset_btn_reset">Reset</string>
    <string name="reset_initem_password">Please enter your new password：</string>
    <string name="reset_ver_initem_username">Please confirm your user name</string>
    <string name="reset_ver_initem_code">Please enter the verification code</string>
    <string name="login_title">WELCOME</string>
    <string name="login_radio_user">User</string>
    <string name="login_redio_master">Master</string>
    <string name="login_btn_into">LOGIN</string>
    <string name="login_btn_toregister">Register</string>
    <string name="login_btn_toreset">Forgot Password?</string>
    <string name="homepage_title">WELECOM</string>
    <string name="homepage_txt_order">ORDER</string>
    <string name="homepage_txt_my">MY</string>
    <string name="homepage_txt_shopping">INDENT</string>
    <string name="fragment_title_my">My Information</string>
    <string name="fragment_title_shopping">Indent</string>
    <string name="fragment_title_order">Take Order</string>
    <string name="fragment_title_edit_order">Modify Order</string>

    <string name="initem_username">Username：</string>
    <string name="initem_password">Password：</string>
    <string name="initem_phone">Phone：</string>
    <string name="initem_name">Name：</string>
    <string name="initem_sex">Sex：</string>
    <string name="initem_age">Age：</string>
    <string name="initem_e_mail">E-mail：</string>
    <string name="initem_address">Address：</string>


    <string name="filechoose_app_name">FileDirChoose</string>
    <string name="filechoose_record">Record</string>
    <string name="filechoose_stop">Stop</string>
    <string name="filechoose_description_info">Info</string>
    <string name="filechoose_permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="filechoose_camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="filechoose_intro_message">sss</string>
    <string name="filechoose_already">您已经选中该文件夹</string>
    <string name="filechoose_sure">确定</string>
    <string name="pop_camera">Take Photo</string>
    <string name="pop_album">Open Album</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_test_text">XXXXX</string>
    <string name="menu_test_date">XXXX/XX/XX</string>
    <string name="no_menu_text">No new menu is released yet.\nPlease wait a moment !</string>
    <string name="no_history_text">No historical order was found !</string>

</resources>
