<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UI.UserLoginActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/login_title"
        android:textSize="36dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/ragType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/login_radio_user"
            android:textColor="#B0000000" />

        <RadioButton
            android:id="@+id/radMaster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/login_redio_master"
            android:textColor="#B0000000" />

    </RadioGroup>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="22dp" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonStytle1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_into"
        android:textColor="#80000000"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="right"
            android:onClick="register"
            android:text="@string/login_btn_toregister"
            android:textColor="#80000000"
            android:textSize="15dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="|"
            android:textColor="#80000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="left"
            android:onClick="forgot"
            android:text="@string/login_btn_toreset"
            android:textColor="#80000000"
            android:textSize="15dp" />

    </LinearLayout>
</LinearLayout>