<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.MyFragment">

    <RelativeLayout style="@style/Fragment_rel_title">

        <TextView
            style="@style/Fragment_txt_title"
            android:text="@string/fragment_title_my" />

        <ImageButton
            android:id="@+id/userIbtn_edit"
            style="@style/ButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:background="#10000000"
            app:srcCompat="@android:drawable/ic_menu_edit" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userImg_photo"
            android:layout_width="120dp"
            android:layout_height="160dp"
            app:srcCompat="@mipmap/ic_mine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <LinearLayout
            style="@style/LinerLayout_my_show"
            android:layout_width="wrap_content"
            android:gravity="right">

            <TextView
                style="@style/Text_item"
                android:text="@string/initem_name" />

            <TextView
                style="@style/Text_item"
                android:text="@string/initem_sex" />

            <TextView
                style="@style/Text_item"
                android:text="@string/initem_age" />

            <TextView
                style="@style/Text_item"
                android:text="@string/initem_phone" />

            <TextView
                style="@style/Text_item"
                android:text="@string/initem_e_mail" />

            <TextView
                style="@style/Text_item"
                android:text="@string/initem_address" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinerLayout_my_show"
            android:layout_width="match_parent"
            android:gravity="left">

            <EditText
                android:id="@+id/userMy_name"
                style="@style/Edit_show"
                android:inputType="text"
                android:maxLength="16" />

            <EditText
                android:id="@+id/userMy_sex"
                style="@style/Edit_show"
                android:inputType="text" />

            <EditText
                android:id="@+id/userMy_age"
                style="@style/Edit_show"
                android:inputType="number"
                android:maxLength="3"/>

            <EditText
                android:id="@+id/userMy_phone"
                style="@style/Edit_show"
                android:inputType="phone"
                android:maxLength="11" />

            <EditText
                android:id="@+id/userMy_email"
                style="@style/Edit_show"
                android:inputType="text" />

            <EditText
                android:id="@+id/userMy_address"
                style="@style/Edit_show"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/my_btnModify"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:text="modify"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/my_btnCancel"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:text="cancel"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

</LinearLayout>