<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".controller.ResetPassword.ResetPasswordActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/reset_title"
        android:textSize="36dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:textSize="15dp"
        android:text="@string/reset_initem_password"/>

    <EditText
        android:id="@+id/editNewPSW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="New Password"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="22dp"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/btnNewPSW"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:text="@string/reset_btn_reset"/>
</LinearLayout>