<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.UserHomepage.Fragment.OrderFragment">


    <RelativeLayout style="@style/Fragment_rel_title">

        <TextView
            style="@style/Fragment_txt_title"
            android:text="@string/fragment_title_order" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/have_not_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="185dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:src="@drawable/sorry" />

        <TextView
            android:id="@+id/no_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/no_menu_text"
            android:textSize="25dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/have_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/order_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/menu_test_date"
                android:textSize="25dp" />

            <LinearLayout
                android:id="@+id/order_menu_one"
                style="@style/order_menu_layout">

                <TextView
                    style="@style/release_menu_title"
                    android:text="MENU - 1" />

                <View style="@style/order_menu_view_title" />

                <LinearLayout style="@style/release_menu_dishes_layout">

                    <TextView
                        style="@style/relese_menu_dishes_top"
                        android:text="DISHES" />

                    <View style="@style/relese_menu_dishes_view" />


                    <LinearLayout style="@style/release_menu_content_layout">

                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="①" />

                            <TextView
                                android:id="@+id/order_dish_1_1"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>


                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="②" />

                            <TextView
                                android:id="@+id/order_dish_1_2"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>

                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="③" />

                            <TextView
                                android:id="@+id/order_dish_1_3"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>

                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="④" />

                            <TextView
                                android:id="@+id/order_dish_1_4"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/order_menu_two"
                style="@style/order_menu_layout"
                android:layout_marginTop="20dp"
                android:visibility="gone">

                <TextView
                    style="@style/release_menu_title"
                    android:text="MENU - 2" />

                <View style="@style/order_menu_view_title" />

                <LinearLayout style="@style/release_menu_dishes_layout">

                    <TextView
                        style="@style/relese_menu_dishes_top"
                        android:text="DISHES" />

                    <View style="@style/relese_menu_dishes_view" />


                    <LinearLayout style="@style/release_menu_content_layout">

                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="①" />

                            <TextView
                                android:id="@+id/order_dish_2_1"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>


                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="②" />

                            <TextView
                                android:id="@+id/order_dish_2_2"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>

                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="③" />

                            <TextView
                                android:id="@+id/order_dish_2_3"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>

                        <LinearLayout style="@style/relese_menu_content_item">

                            <TextView
                                style="@style/relese_menu_content_item_text"
                                android:text="④" />

                            <TextView
                                android:id="@+id/order_dish_2_4"
                                style="@style/relese_menu_content_item_text" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/order_layout_soup_one"
                style="@style/order_menu_layout"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    style="@style/relese_menu_dishes_top"
                    android:text="SOUP" />

                <View style="@style/relese_menu_dishes_view" />

                <LinearLayout style="@style/relese_menu_soup_content_layout">

                    <TextView
                        android:id="@+id/order_soup_one"
                        style="@style/relese_menu_content_item_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/order_layout_soup_two"
                style="@style/order_menu_layout"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">


                <TextView
                    style="@style/relese_menu_dishes_top"
                    android:text="SOUP" />

                <View style="@style/relese_menu_dishes_view" />

                <LinearLayout style="@style/relese_menu_soup_content_layout">

                    <TextView
                        android:id="@+id/order_soup_two"
                        style="@style/relese_menu_content_item_text" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/order_btn"
                style="@style/ButtonStyle"
                android:background="@drawable/radiu_button"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:padding="0dp"
                android:text="confirm"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>